--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/lab": "6.0.0-beta.19",
     "@mui/material": "6.2.1",
     "@mui/material-nextjs": "6.2.1",
+    "@mui/x-date-pickers": "^8.11.2",
     "@prisma/client": "5.22.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/match-sorter-utils": "8.19.4",
@@ -49,6 +50,7 @@
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
     "@tiptap/starter-kit": "^2.10.4",
+    "antd": "^5.27.3",
     "apexcharts": "3.49.0",
     "bootstrap-icons": "1.11.3",
     "classnames": "2.5.1",
@@ -76,6 +78,7 @@
     "react-toastify": "10.0.6",
     "react-use": "17.6.0",
     "recharts": "2.15.0",
+    "rsuite": "^5.83.3",
     "server-only": "0.0.1",
     "valibot": "0.42.1"
   },
