--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fullcalendar/react": "6.1.15",
     "@fullcalendar/timegrid": "6.1.15",
     "@hookform/resolvers": "3.9.1",
+    "@mui/icons-material": "^7.3.2",
     "@mui/lab": "6.0.0-beta.19",
     "@mui/material": "6.2.1",
     "@mui/material-nextjs": "6.2.1",
@@ -72,6 +73,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "14.3.5",
     "react-hook-form": "7.54.1",
+    "react-icons": "^5.5.0",
     "react-map-gl": "7.1.8",
     "react-perfect-scrollbar": "1.5.8",
     "react-player": "2.16.0",
